--- a/MyWorkPython/Abderhman Abdelllatif sol.ipynb
+++ b/MyWorkPython/Abderhman Abdelllatif sol.ipynb
@@ -88,29 +88,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[[[0, 0, 0, 0, 0, 0]],\n",
-       " [[0, 1, 2, 3, 4, 5]],\n",
-       " [[0, 2, 4, 6, 8, 10]],\n",
-       " [[0, 3, 6, 9, 12, 15]],\n",
-       " [[0, 4, 8, 12, 16, 20]]]"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0, 0, 0, 0, 0], [0, 1, 2, 3, 4], [0, 2, 4, 6, 8], [0, 3, 6, 9, 12], [0, 4, 8, 12, 16]]\n"
+     ]
     }
    ],
    "source": [
     "# Answer 2_a) SOLVE HERE:\n",
-    "listx=[[0, 0, 0, 0, 0, 0], [0, 1, 2, 3, 4, 5], [0, 2, 4, 6, 8, 10], [0, 3, 6, 9, 12, 15], [0, 4, 8, 12, 16, 20]]\n",
-    "com=[[i] for i in listx]\n",
-    "com"
+    "b = [[i*j for j in range(5)]for i in range(5)]\n",
+    "print(b)\n",
+    "\n"
    ]
   },
   {
